--- a/src/assets/components/products/products.css
+++ b/src/assets/components/products/products.css
@@ -211,3 +211,9 @@ body{
 .product-actions > svg , a {
   cursor: pointer;
 }
+
+@media (max-width: 640px) {
+  .product-filter {
+    margin: 20% auto;
+  }
+}
