--- a/src/assets/components/Header/Header.css
+++ b/src/assets/components/Header/Header.css
@@ -1,26 +1,32 @@
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
-#ul{
-    transition: 0.3s;
+
+#ul {
+  transition: 0.3s;
 }
-#ul li{
-    font-size: 50px;
-    text-align: right;
-    color: white;
+
+#ul li {
+  font-size: 50px;
+  text-align: right;
+  color: white;
 }
-a{
-    color: black;
+
+a {
+  color: black;
 }
+
 .dropdown {
   transition: 1s;
   position: relative;
   display: inline-block;
 }
-.dropbtn{
+
+.dropbtn {
   padding-left: 10px;
 }
+
 .dropdown-content {
   display: none;
   position: absolute;
@@ -28,7 +34,8 @@ a{
   min-width: 220px;
   z-index: 1;
 }
-.dropdown-content::before{
+
+.dropdown-content::before {
   content: "";
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
@@ -39,6 +46,7 @@ a{
   left: 40px;
   top: -6px;
 }
+
 .dropdown-content a {
   color: black;
   padding: 16px 20px;
@@ -46,354 +54,220 @@ a{
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
-.dropdown-content a:hover::after{
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown-content a:hover::after {
   width: 0;
 }
-.dropdown:hover .dropdown-content{display: block;}
-header{
-    width: 100%;
-    margin-top: 15px;
-    background-color: transparent;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
-.nav{
-    display: none;
+
+header {
+  width: 100%;
+  margin-top: 15px;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-header .icon{
+
+.nav {
+  display: none;
+}
+
+header .icon {
   display: flex;
   margin: 10px;
   justify-content: center;
   align-items: center;
   font-size: 2rem;
 }
-.large-screens nav{
-    width: 100%;
-    text-align: right;
-    float: right;
-    margin: auto;
+
+.large-screens nav {
+  width: 100%;
+  text-align: right;
+  float: right;
+  margin: auto;
 }
+
 .large-screens nav > a {
-    position: relative;
-    padding: 10px;
-    text-decoration: none;
-    letter-spacing: 0.5px;
-    font-size: 1rem;
-    padding: 0 10px;
+  position: relative;
+  padding: 10px;
+  text-decoration: none;
+  letter-spacing: 0.5px;
+  font-size: 1rem;
+  padding: 0 10px;
 }
-.large-screens nav > a:after{
-    content: "";
-    position: absolute;
-    background-color: var(--active);
-    height: 3px;
-    width: 0;
-    left: 0;
-    bottom: -10px;
-    transition: 0.3s;
+
+.large-screens nav > a:after {
+  content: "";
+  position: absolute;
+  background-color: var(--active);
+  height: 3px;
+  width: 0;
+  left: 0;
+  bottom: -10px;
+  transition: 0.3s;
 }
-.large-screens nav a:hover , .active{
-    color: var(--active);
+
+.large-screens nav a:hover,
+.active {
+  color: var(--active);
 }
-.large-screens nav a:hover::after{
-    width: 100%;
+
+.large-screens nav a:hover::after {
+  width: 100%;
 }
-.logo{
-    margin-right: 10px;
+
+.logo {
+  margin-right: 10px;
 }
-.active::after{
-    width: 100%;
+
+.active::after {
+  width: 100%;
 }
-header button{
-    float: right;
-    text-align: center;
-    margin-top: 7px;
-    width: 170px;
-    height: 40px;
-    font-size: 0.9rem;
-    margin-left: 15px;
-    border-radius: 15px;
-    background-color: transparent;
+
+header button {
+  float: right;
+  text-align: center;
+  margin-top: 7px;
+  width: 170px;
+  height: 40px;
+  font-size: 0.9rem;
+  margin-left: 15px;
+  border-radius: 15px;
+  background-color: transparent;
 }
-header button.active{
-    background-color: var(--active);
-    color: white;
-    box-shadow: -11px 12px 43px -11px rgba(0,0,0,0.73);
-    -webkit-box-shadow: -11px 12px 43px -11px rgba(0,0,0,0.73);
-    -moz-box-shadow: -11px 12px 43px -11px rgba(0,0,0,0.73);
+
+header button.active {
+  background-color: var(--active);
+  color: white;
+  box-shadow: -11px 12px 43px -11px rgba(0, 0, 0, 0.73);
+  -webkit-box-shadow: -11px 12px 43px -11px rgba(0, 0, 0, 0.73);
+  -moz-box-shadow: -11px 12px 43px -11px rgba(0, 0, 0, 0.73);
 }
-header button:hover{
-    background-color: var(--active);
-    color: white;
-    box-shadow: -11px 12px 43px -11px rgba(0,0,0,0.73);
-    -webkit-box-shadow: -11px 12px 43px -11px rgba(0,0,0,0.73);
-    -moz-box-shadow: -11px 12px 43px -11px rgba(0,0,0,0.73);
+
+header button:hover {
+  background-color: var(--active);
+  color: white;
+  box-shadow: -11px 12px 43px -11px rgba(0, 0, 0, 0.73);
+  -webkit-box-shadow: -11px 12px 43px -11px rgba(0, 0, 0, 0.73);
+  -moz-box-shadow: -11px 12px 43px -11px rgba(0, 0, 0, 0.73);
 }
+
 header nav svg {
   font-size: 1.2rem;
 }
-  .nav {
-    width: 100vw;
-    height: 100px;
-    background: transparent;
-    position: absolute;
-    top: 0;
-    animation: 2s fadeInNav ease;
-  }
-  
-  @keyframes fadeInNav {
-    0% {
-      opacity: 0;
-    }
-    50% {
-      opacity: 0;
-      top: -25px;
-    }
-    100% {
-      opacity: 1;
-      top: 0;
-    } 
-  }
-  
-  .navWrapper {
-    width: 85%;
-    margin: auto;
-    padding-top: 24px;
-  }
-  
-  #logo {
-    color: #292929;
-    font-size: 30px;
-    font-weight: normal;
-    text-decoration: none;
-  }
-  
-  .right {
-    float: right;
-  }
-  
-  #nav-icon {
-    width: 60px;
-    height: 45px;
-    position: relative;
-    z-index: 2;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg) scale(0.4);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  
-  #nav-icon span {
-    display: block;
-    position: absolute;
-    height: 9px;
-    width: 100%;
-    background: #292929;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-  }
-  
-  #nav-icon span:nth-child(1) {
-    top: 0px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-  }
-  
-  #nav-icon span:nth-child(2) {
-    top: 18px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-  }
-  
-  #nav-icon span:nth-child(3) {
-    top: 36px;
-    -webkit-transform-origin: left center;
-    -moz-transform-origin: left center;
-    -o-transform-origin: left center;
-    transform-origin: left center;
-  }
-  
-  #nav-icon.open span:nth-child(1) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    top: -3px;
-    left: 8px;
-    background: white;
-  }
-  
-  #nav-icon.open span:nth-child(2) {
-    width: 0%;
-    opacity: 0;
-    background: white;
-  }
-  
-  #nav-icon.open span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    top: 39px;
-    left: 8px;
-    background: white;
-  }
-  
-  .overlay {
-    width: 100%;
-    height: 100%;
-    background: #151515;
-    position: fixed;
-    top: 0;
-    left: 0;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    opacity: 0;
-    z-index: 1;
-    visibility: hidden;
-    display: flex;
-    align-items: center;
-  }
-  
-  .overlay.open {
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .overlay a {
-    color: white;
-    text-align: right;
-    font-size: 34px;
-    font-weight: bold;
-    text-decoration: none;
-    display: block;
-    margin-left: 135px;
-    margin-bottom: 15px; 
-    opacity: 0;
-    transition: transform 0.2s ease;
-    overflow: hidden;
-  }
-  .overlay p {
-    color: #4B4B4B;
-    font-size: 20px;
-    font-weight: normal;
-    position: absolute;
-    bottom: 100px;
-    margin-left: 135px;
-    opacity: 0;
-  }
-  
-  .overlay p.open {
-    opacity: 1;
-    animation: 1.70s fadeInCopyright ease;
-  }
-  
-  @keyframes fadeInCopyright {
-    0%{
-      opacity: 0;
-    }
-    80%{
-      opacity: 0;
-      transform: translateY(-10px);
-    }
-    100%{
-      opacity: 1;
-    }
-  }
-  
-  .overlay a:after {
-    position: absolute;
-    transition: .3s;
-    content: '';
-    width: 0;
-    left: 50%;
-    bottom: 0;
-    height: 3px;
-    background: white;
-    left: 0;
-  }
-  
-  .overlay a:hover:after {
-    width: 100%;
-    left: 0;
-  }
-  
-  .overlay a.open:hover {
-    transform: translateY(2px);
-  }
-  
-  .overlay a.open:nth-child(1) {
-    opacity: 1;
-    animation: 1s fadeInLinks1 ease;
-  }
-  .large-screens .active::after{
-    width: 100%;
+
+.nav {
+  width: 100vw;
+  height: 100px;
+  background: transparent;
+  position: absolute;
+  top: 0;
+  animation: 2s fadeInNav ease;
 }
-  @keyframes fadeInLinks1 {
-    0%{
-      opacity: 0;
-    }
-    50%{
-      opacity: 0;
-      transform: translateY(-10px);
-    }
-    100%{
-      opacity: 1;
-    }
+
+@keyframes fadeInNav {
+  0% {
+    opacity: 0;
   }
-  
-  .overlay a.open:nth-child(2) {
+  50% {
+    opacity: 0;
+    top: -25px;
+  }
+  100% {
     opacity: 1;
-    animation: 1.25s fadeInLinks2 ease;
+    top: 0;
   }
-  
-  @keyframes fadeInLinks2 {
-    0%{
-      opacity: 0;
-    }
-    60%{
-      opacity: 0;
-      transform: translateY(-10px);
-    }
-    100%{
-      opacity: 1;
-    }
+}
+
+.navWrapper {
+  width: 85%;
+  margin: 0 auto;
+  padding-top: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#logo {
+  color: #292929;
+  font-size: 30px;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+.right {
+  float: right;
+}
+
+#nav-icon {
+  position: relative;
+  z-index: 2;
+  cursor: pointer;
+  margin-top: 10px;
+  font-size: 2rem;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: #151515;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: all 0.3s ease;
+  opacity: 0;
+  z-index: 1;
+  visibility: hidden;
+}
+
+.overlay.open {
+  opacity: 1;
+  visibility: visible;
+  height: 100vh;
+}
+
+.overlayContent {
+  height: 100%;
+  margin-top: 25%;
+}
+
+.overlay a {
+  color: white;
+  text-align: right;
+  font-size: 2rem;
+  font-weight: bold;
+  text-decoration: none;
+  display: block;
+  opacity: 0;
+  margin-right: 15px;
+  transition: transform 0.2s ease;
+  overflow: hidden;
+}
+
+.overlay a.open {
+  opacity: 1;
+}
+
+#nav-icon .open{
+  color: white;
+}
+@media (max-width: 640px) {
+  .overlay {
+    display: block;
   }
-  
-  .overlay a.open:nth-child(3) {
-    opacity: 1;
-    animation: 1.5s fadeInLinks3 ease;
-  } 
-    
-  @keyframes fadeInLinks3 {
-    0%{
-      opacity: 0;
-    }
-    70%{
-      opacity: 0;
-      transform: translateY(-10px);
-    }
-    100%{
-      opacity: 1;
-    }
-  } 
+
+  .large-screens {
+    display: none;
+  }
+
+  .nav {
+    display: block;
+  }
+}
