--- a/src/assets/components/productDetails/productDetails.css
+++ b/src/assets/components/productDetails/productDetails.css
@@ -8,6 +8,8 @@ body{
     align-items: center;
     justify-content: center;
     padding: 40px;
+    width: 100%;
+    height: 100vh;
   }
   
   .images-container {
@@ -61,10 +63,6 @@ body{
     color: #3a6cf4;
     justify-content: revert;
   }
-  .ProductDetailes{
-    width: 100%;
-    height: 100vh;
-  }
   .ProductDetailes button{
     width: 100%;
     font-size: 1.3rem;
@@ -81,5 +79,19 @@ body{
   .ProductDetailes button:hover{
     transform: scale(1.1);
     transition: 0.5s;
+  }
+
+  @media (max-width: 640px) {
+    .ProductDetailes{
+      display: block;
+      margin-top: 10%;
+    }
+    .images-container{
+      width: 100%;
+    }
+    .product-info{
+      width: 100%;
+      display: block;
+    }
   }
   
